[project]
name = "maxz-custom-nodes"
description = "Custom nodes for ComfyUI, depending on EasyNodes."
version = "0.1.0"
license = { file = "LICENSE.txt" }
dependencies = ["ComfyUI-EasyNodes"]

[project.urls]
Repository = "https://github.com/MaxZabarka/joy-caption-custom-node"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "MaxZabarka"
DisplayName = "MaxZ Custom Nodes"
Icon = ""
